# ananke2

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  celery-broker.sqlite  celery-results.sqlite  docker-compose.yml  project_log.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py
app/database/: __init__.py  base.py  graph.py  query.py  relational.py  sync_wrappers.py  vector.py
app/models/: __init__.py  base.py  entities.py  expressions.py  relations.py  structured.py  triples.py  types.py
app/processors/: document.py
app/routers/: tasks.py
app/tasks/: __init__.py  document.py  workflow.py
app/utils/: monitoring.py  qwen.py
doc/: core_modules.txt
doc/source/: architecture.rst  conf.py  dependency_management.rst  development.rst  index.rst  process_flows.rst
docker/mysql/init/: 01-init.sql
test_docs/: output_graph.json  sample.txt
tests/: check_databases.py  test_database_interfaces.py  test_document_processing.py  test_document_processor.py  test_document_workflow.py  test_knowledge_graph.py  test_models.py  test_query.py  test_tasks.py  test_workflow.py  verify_installations.py  verify_processing.py  verify_unstructured.py
web/: index.html  package-lock.json  package.json
web/src/app/: page.tsx
web/src/components/ui/: alert.tsx
web/src/types/: graph.ts
