[tool.poetry]
name = "ananke2"
version = "0.1.0"
description = "Knowledge structuring network storage system"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.1,<3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
numpy = "1.26.4"
sympy = "^1.13.3"
pydantic = "^2.10.3"
neo4j = "^5.18.0"
chromadb = "^0.4.24"
aiomysql = "^0.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
sqlalchemy-utils = "^0.41.2"
redis = "^5.0.1"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
pydantic-settings = "^2.7.0"
openai = "^1.58.1"
pymupdf = "^1.25.1"
neo4j-driver = "^5.27.0"
mysql-connector-python = "^9.1.0"
cryptography = "^44.0.0"
requests = "^2.32.3"
pymysql = "^1.1.1"
dashscope = "^1.20.14"
unstructured = {extras = ["pdf"], version = "^0.12.4"}
arxiv = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-env = "^1.1.3"

[tool.pytest.ini_options]
env = [
    "DOCKER_NETWORK=false",
    "CELERY_BROKER_URL=sqla+sqlite:///celery-broker.sqlite",
    "CELERY_RESULT_BACKEND=db+sqlite:///celery-results.sqlite",
    "PYTHONPATH=/home/ubuntu/repos/ananke2",
    "QWEN_API_KEY=sk-46e78b90eb8e4d6ebef79f265891f238",
    "CUDA_VISIBLE_DEVICES=-1",
    "TORCH_CPU_ONLY=1",
    "TF_FORCE_GPU_ALLOW_GROWTH=false",
    "TF_CPU_ONLY=1"
]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services",
    "unit: marks tests that can run locally"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
